# rust-darts

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
benches/: darts_benchmark.rs
examples/build-dict/: Cargo.toml
examples/build-dict/src/: main.rs
src/: lib.rs  searcher.rs
