[package]
name = "darts"
description = "A double array trie, A Forward Maximum Matching Searcher."
repository = "https://github.com/andelf/rust-darts"
version = "0.1.0"
license = "MIT"
authors = ["andelf <andelf@gmail.com>"]
readme = "README.md"
keywords = ["trie", "darts"]
categories = ["encoding"]
edition = "2018"

[dependencies]
bincode = { version = "1.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.2"
lazy_static = "1.0"
hashbrown = "0.5.0"

[[bench]]
name = "darts_benchmark"
harness = false

[features]
default = []
searcher = []
serialization = ["bincode", "serde"]

[package.metadata.docs.rs]
all-features = true
